--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^2.29.3",
     "dotenv": "^16.3.1",
     "firebase": "^9.14.0",
+    "framer-motion": "^10.17.9",
     "react": "^18.2.0",
     "react-day-picker": "^8.3.6",
     "react-dom": "^18.2.0",
